product page mobile display:none's blocks visibility fix

--- a/app/components/bem-blocks/single-product/single-product.scss
+++ b/app/components/bem-blocks/single-product/single-product.scss
@@ -10,13 +10,18 @@
 }
 
 @media screen and (max-width: 767px) {
-  .single-product,
-  .topbar,
-  .products-slider-block,
-  .footer,
-  .fixed-chat {
-    display: none !important;
+  .single-product-main {
+    .single-product,
+    .topbar,
+    .products-slider-block {
+      display: none !important;
+    }
+    & ~ .footer,
+    & ~ .fixed-chat {
+      display: none !important;
+    }
   }
+  
   .single-product-mob {
     display: block;
   }
